# mcp-edit-math

./: .gitignore  DESIGN.md  Dockerfile.txt  LICENSE  NOTICE  README.md  glama.json  mcp_edit_math.py  pyproject.toml  requirements.txt  smithery.yaml
.github/: FUNDING.yml
examples/: SCENARIOS.md  adversarial_sha256_confirmation.md  test_class.js  test_external.js  test_generics.ts  test_observer.js  test_page.html  test_python.py  test_recursion.js  test_script.js  test_types.ts
