[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-edit-math"
version = "1.3.0"
description = "Architectural Gatekeeper for AI Coding Assistants (MCP Server)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Annenkov Yuriy", email = "yannenkovkraft@gmail.com" },
]
keywords = ["mcp", "ai", "llm", "security", "tree-sitter"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp",
  "tree-sitter==0.21.3",
  "tree-sitter-javascript==0.21.0",
  "tree-sitter-typescript==0.21.0",
  "tree-sitter-html==0.20.3",
]

[project.urls]
Homepage = "https://github.com/yrannkv/mcp-edit-math"
Repository = "https://github.com/yrannkv/mcp-edit-math"

[project.scripts]
mcp-edit-math = "mcp_edit_math:main"

[tool.setuptools]
license-files = []